Fixed issues with text stroke on mobile devices being too thick.

--- a/src/components/Hangman/Hangman.css
+++ b/src/components/Hangman/Hangman.css
@@ -18,8 +18,8 @@ html, body {
 }
 .hangman-state {
 	position: absolute;
-	margin-top: 11em;
-	max-height: 9em;
+	margin-top: 11.5em;
+	max-height: 8em;
 }
 #wrapper {
 	display: flex;
@@ -134,7 +134,7 @@ button:focus, button:hover {
 }
 #word-select-container {
 	width: 70%;
-    margin: 15%;
+    margin: 5%;
     /* transform: scale(1.4); */
 	display: flex;
     flex-wrap: wrap;
@@ -227,6 +227,7 @@ button:focus, button:hover {
 	/* #answer-word {margin: 6em 0 1em;} */
 	#footer {height: 2.5rem !important; font-size: .9rem !important;}
 	#instructions {margin: 8em 0 0 8em;}
+	.result {font-weight: 500;}
 }
 @media screen and (min-width: 1366px) {
 	.hangman-container {min-height: 80vh; width: 70%;}
