--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -10,7 +10,6 @@
 .result {
     color: mediumspringgreen;
     font-size: 1.5rem;
-    font-weight: 500;
 }
 #lose-text {
     color: red;
